plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ar.training'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
//	maven { url = 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-r2dbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.mapstruct:mapstruct:1.6.0'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.0'
	implementation 'io.github.resilience4j:resilience4j-spring-boot4:2.4.0'
    implementation 'io.github.resilience4j:resilience4j-reactor:2.4.0'
	implementation "org.springframework.boot:spring-boot-starter-aop:4.0.0-M2"
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Migration tool driver (Optional, only if using Flyway/Liquibase)
	runtimeOnly 'org.postgresql:r2dbc-postgresql'
	testRuntimeOnly 'org.postgresql:r2dbc-postgresql'

	testImplementation 'org.springframework.boot:spring-boot-starter-webflux-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-r2dbc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-r2dbc-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-postgresql'
	testImplementation 'org.testcontainers:testcontainers-r2dbc'

}

tasks.named('test') {
	useJUnitPlatform()
}

// covers current test task and any future test tasks (e.g. integrationTest)
tasks.withType(Test).configureEach {
	jvmArgs '-XX:+EnableDynamicAgentLoading'
}
